<package>
  <name>mops</name>
  <version>0.1.0</version>
  <license>BSD</license>
  <maintainer email="oleszczyk.m@gmail.com">Michal Oleszczyk</maintainer>
  <description>
    MOPS support.
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build deps are queried automatically with orocos_use_package() -->
  <build_depend>rtt</build_depend>
  <!-- <build_depend>ocl</build_depend> -->
  <!-- <build_depend>rtt_ros</build_depend> -->

  <run_depend>rtt</run_depend>
  <!-- <run_depend>ocl</run_depend> -->
  <!-- <run_depend>rtt_ros</run_depend> -->

  <!-- ROS Msg Typekits and Srv Proxies -->
  <!-- <build_depend>rtt_sensor_msgs</build_depend> -->
  <!-- <run_depend>rtt_sensor_msgs</run_depend> -->

  <!-- <export> -->
  <!--  <rtt_ros> -->
      <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
  <!--     <plugin_depend>rtt_sensor_msgs</plugin_depend> -->
  <!--   </rtt_ros> -->
  <!-- </export> -->
</package>
